--- a/css/home.css
+++ b/css/home.css
@@ -22,7 +22,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 110vh;
-    background-image: url(/Asset/bg2.png);
+    background-image: url(../Asset/bg2.png);
     background-size: 100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
