--- a/css/health.css
+++ b/css/health.css
@@ -9,7 +9,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 110vh;
-    background-image: url(/Asset/bg2.png);
+    background-image: url(Finness-SE/Asset/bg2.png);
     background-size: 100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
